added config for theming

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,5 @@
 .pricingBody {
-  background-color: #f7f7ff;
+  background-color: #fbf7ff;
   height: 100vh;
   padding-top: 10vh;
   background-image: url(../bg-bottom.svg), url(../bg-top.svg);
