Added font and styling

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,25 +1,31 @@
 .pricingBody {
-  background-color: #fbf7ff;
   height: 100vh;
   padding-top: 10vh;
+}
+
+body {
+  background-color: #fbf7ff;
+  height: 100vh;
   background-image: url(../bg-bottom.svg), url(../bg-top.svg);
   background-position: left bottom, right top;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-h3 {
-  margin: 40px 0 0;
+@media (max-width: 600px) {
+  body {
+    background-image: url(../bg-top.svg);
+    background-position: right top;
+  }
 }
-ul {
-  list-style-type: none;
-  padding: 0;
+
+.title-text {
+  font-weight: 900;
+  color: #44485b;
 }
-li {
-  display: inline-block;
-  margin: 0 10px;
-}
-a {
-  color: #42b983;
+
+h1 {
+  color: #44485b;
 }
 
 .price {
@@ -33,7 +39,7 @@ a {
   padding: 8px;
   margin: 0px;
   font-weight: 700;
-  color: #818191;
+  color: #8b8d99;
 }
 
 hr {
@@ -52,4 +58,13 @@ hr {
 
 .ant-btn {
   width: 90%;
+  background: rgb(154, 157, 227);
+  background: linear-gradient(
+    90deg,
+    rgba(154, 157, 227, 1) 0%,
+    rgba(130, 133, 227, 1) 39%,
+    rgba(106, 110, 224, 1) 100%
+  );
+  letter-spacing: 1px;
+  font-family: "Montserrat-Bold";
 }
